[tool.poetry]
name = "enrollment"
version = "0.1.0"
description = ""
authors = ["usrsem <andrey7menov@gmail.com>"]
license = "MIT"

packages = [
    { include = "api", from = "src" },
    { include = "db", from = "src" },
    { include = "config", from = "src" },
]


[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.7.7"
SQLAlchemy = "^1.4.35"
aiohttp = "^3.8.1"
loguru = "^0.6.0"
marshmallow = "^3.15.0"
marshmallow-enum = "^1.5.1"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "api.__main__:main"
# migrations = ""
